--- a/D8dashboard/templates/base/sidebar.html
+++ b/D8dashboard/templates/base/sidebar.html
@@ -8,24 +8,31 @@
     </div>
 
     <!-- Sidebar Navigation Tags -->
-
     <ul class="c-sidebar-nav">
         <li class="c-sidebar-nav-title">Gotion RDB</li>
         <!-- Dashboard Tag -->
         <li class="c-sidebar-nav-item">
             <a class="c-sidebar-nav-link" href="{% url 'home' %}">
                 <svg class="c-sidebar-nav-icon">
-                  <use xlink:href="{% static 'dist/vendors/@coreui/icons/svg/free.svg' %}#cil-speedometer"></use>
-                </svg> Homepage - Template
+                  <use xlink:href="{% static 'dist/vendors/@coreui/icons/svg/free.svg' %}#cil-home"></use>
+                </svg> Homepage
                 <span class="badge badge-info">NEW</span>
             </a>
         </li>
+
     <!-- Group Starts -->
     <li class="c-sidebar-nav-title">Database System</li>
     <li class="c-sidebar-nav-item">
+        <a class="c-sidebar-nav-link" href="{% url 'search' %}">
+            <svg class="c-sidebar-nav-icon">
+              <use xlink:href="{% static 'dist/vendors/@coreui/icons/svg/free.svg' %}#cil-find-in-page"></use>
+            </svg> Search
+        </a>
+    </li>
+    <li class="c-sidebar-nav-item">
         <a class="c-sidebar-nav-link" href="{% url 'database_dashboard' %}">
             <svg class="c-sidebar-nav-icon">
-              <use xlink:href="{% static 'dist/vendors/@coreui/icons/svg/free.svg' %}#cil-home"></use>
+              <use xlink:href="{% static 'dist/vendors/@coreui/icons/svg/free.svg' %}#cil-speedometer"></use>
             </svg> Dashboard
         </a>
     </li>
@@ -46,106 +53,6 @@
     </li>
 
     <!-- Group Ends -->
-
-    <!-- Divider -->
-    <li class="c-sidebar-nav-divider"></li>
-
-    <!-- Group Starts -->
-    <li class="c-sidebar-nav-title">Components</li>
-    <li class="c-sidebar-nav-item c-sidebar-nav-dropdown"><a class="c-sidebar-nav-link c-sidebar-nav-dropdown-toggle" href="#">
-        <svg class="c-sidebar-nav-icon">
-          <use xlink:href="{% static 'dist/vendors/@coreui/icons/svg/free.svg' %}#cil-puzzle"></use>
-        </svg> Base</a>
-      <ul class="c-sidebar-nav-dropdown-items">
-        <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="#"><span class="c-sidebar-nav-icon"></span> Breadcrumb</a></li>
-        <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="#"><span class="c-sidebar-nav-icon"></span> Cards</a></li>
-        <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="#"><span class="c-sidebar-nav-icon"></span> Carousel</a></li>
-        <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="#"><span class="c-sidebar-nav-icon"></span> Collapse</a></li>
-        <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="#"><span class="c-sidebar-nav-icon"></span> Forms</a></li>
-        <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="#"><span class="c-sidebar-nav-icon"></span> Jumbotron</a></li>
-        <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="#"><span class="c-sidebar-nav-icon"></span> List group</a></li>
-        <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="#"><span class="c-sidebar-nav-icon"></span> Navs</a></li>
-        <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="#"><span class="c-sidebar-nav-icon"></span> Pagination</a></li>
-        <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="#"><span class="c-sidebar-nav-icon"></span> Popovers</a></li>
-        <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="#"><span class="c-sidebar-nav-icon"></span> Progress</a></li>
-        <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="#"><span class="c-sidebar-nav-icon"></span> Scrollspy</a></li>
-        <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="#"><span class="c-sidebar-nav-icon"></span> Switches</a></li>
-        <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="#"><span class="c-sidebar-nav-icon"></span> Tables</a></li>
-        <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="#"><span class="c-sidebar-nav-icon"></span> Tabs</a></li>
-        <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="#"><span class="c-sidebar-nav-icon"></span> Tooltips</a></li>
-      </ul>
-    </li>
-    <li class="c-sidebar-nav-item c-sidebar-nav-dropdown"><a class="c-sidebar-nav-link c-sidebar-nav-dropdown-toggle" href="#">
-        <svg class="c-sidebar-nav-icon">
-          <use xlink:href="{% static 'dist/vendors/@coreui/icons/svg/free.svg' %}#cil-cursor"></use>
-        </svg> Buttons</a>
-      <ul class="c-sidebar-nav-dropdown-items">
-        <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="#"><span class="c-sidebar-nav-icon"></span> Buttons</a></li>
-        <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="#"><span class="c-sidebar-nav-icon"></span> Buttons Group</a></li>
-        <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="#"><span class="c-sidebar-nav-icon"></span> Dropdowns</a></li>
-        <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="#"><span class="c-sidebar-nav-icon"></span> Brand Buttons</a></li>
-      </ul>
-    </li>
-    <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="charts.html">
-        <svg class="c-sidebar-nav-icon">
-          <use xlink:href="{% static 'dist/vendors/@coreui/icons/svg/free.svg' %}#cil-chart-pie"></use>
-        </svg> Charts</a></li>
-    <li class="c-sidebar-nav-dropdown"><a class="c-sidebar-nav-dropdown-toggle" href="#">
-        <svg class="c-sidebar-nav-icon">
-          <use xlink:href="{% static 'dist/vendors/@coreui/icons/svg/free.svg' %}#cil-star"></use>
-        </svg> Icons</a>
-      <ul class="c-sidebar-nav-dropdown-items">
-        <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="icons/coreui-icons-free.html"> CoreUI Icons<span class="badge badge-success">Free</span></a></li>
-        <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="icons/coreui-icons-brand.html"> CoreUI Icons - Brand</a></li>
-        <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="icons/coreui-icons-flag.html"> CoreUI Icons - Flag</a></li>
-      </ul>
-    </li>
-    <li class="c-sidebar-nav-item c-sidebar-nav-dropdown"><a class="c-sidebar-nav-link c-sidebar-nav-dropdown-toggle" href="#">
-        <svg class="c-sidebar-nav-icon">
-          <use xlink:href="{% static 'dist/vendors/@coreui/icons/svg/free.svg' %}#cil-bell"></use>
-        </svg> Notifications</a>
-      <ul class="c-sidebar-nav-dropdown-items">
-        <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="notifications/alerts.html"><span class="c-sidebar-nav-icon"></span> Alerts</a></li>
-        <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="notifications/badge.html"><span class="c-sidebar-nav-icon"></span> Badge</a></li>
-        <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="notifications/modals.html"><span class="c-sidebar-nav-icon"></span> Modals</a></li>
-      </ul>
-    </li>
-    <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="widgets.html">
-        <svg class="c-sidebar-nav-icon">
-          <use xlink:href="{% static 'dist/vendors/@coreui/icons/svg/free.svg' %}#cil-calculator"></use>
-        </svg> Widgets<span class="badge badge-info">NEW</span></a></li>
-    <!-- Group Ends -->
-
-    <!-- Divider -->
-    <li class="c-sidebar-nav-divider"></li>
-
-    <!-- Group Starts -->
-    <li class="c-sidebar-nav-title">Extras</li>
-    <li class="c-sidebar-nav-item c-sidebar-nav-dropdown"><a class="c-sidebar-nav-link c-sidebar-nav-dropdown-toggle" href="#">
-        <svg class="c-sidebar-nav-icon">
-          <use xlink:href="{% static 'dist/vendors/@coreui/icons/svg/free.svg' %}#cil-star"></use>
-        </svg> Pages</a>
-      <ul class="c-sidebar-nav-dropdown-items">
-        <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="login.html" target="_top">
-            <svg class="c-sidebar-nav-icon">
-              <use xlink:href="{% static 'dist/vendors/@coreui/icons/svg/free.svg' %}#cil-account-logout"></use>
-            </svg> Login</a></li>
-        <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="register.html" target="_top">
-            <svg class="c-sidebar-nav-icon">
-              <use xlink:href="{% static 'dist/vendors/@coreui/icons/svg/free.svg' %}#cil-account-logout"></use>
-            </svg> Register</a></li>
-        <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="404.html" target="_top">
-            <svg class="c-sidebar-nav-icon">
-              <use xlink:href="{% static 'dist/vendors/@coreui/icons/svg/free.svg' %}#cil-bug"></use>
-            </svg> Error 404</a></li>
-        <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="500.html" target="_top">
-            <svg class="c-sidebar-nav-icon">
-              <use xlink:href="{% static 'dist/vendors/@coreui/icons/svg/free.svg' %}#cil-bug"></use>
-            </svg> Error 500</a></li>
-      </ul>
-    </li>
-    <!-- Group Ends -->
-
 
   </ul>
   <!-- Minimizer-->
