--- a/D8dashboard/templates/search_result.html
+++ b/D8dashboard/templates/search_result.html
@@ -3,6 +3,61 @@
 
 {% block content %}
 
+<!-- Search Box -->
+	<div class="" style="width:100%">
+	  	<div class="row">
+	    	<div class="col-md-12 d-flex justify-content-center">
+	      		<div class="card" style="width:100%">
+			        <div class="card-header d-flex justify-content-between">
+			        	<div class="text-left">
+			        		<strong>DB Search</strong>
+			        	</div>
+			        	<div class="text-right">
+			       			<!-- Option text or links -->
+			        	</div>
+			        </div>
+			        <div class="card-body">
+			          <form id="search_form" class="form-horizontal" action="{% url 'result' %}" method="post" enctype="multipart/form-data">
+			          	{% csrf_token %}
+			            <div class="d-flex form-group row justify-content-center">
+
+			              <label class="col-md-1 col-form-label" for="text-input">Key Word</label>
+			              <div class="col-md-2">
+			                <input class="form-control" id="keyword-input" type="text" name="keyword-input" placeholder="Type Key Word for Issue Search"><span class="help-block" hidden>This is a help text</span>
+			              </div>
+
+  			              <label class="col-md-1 col-form-label" for="text-input">Name</label>
+			              <div class="col-md-2">
+			                <input class="form-control" id="name-input" type="text" name="name-input" placeholder="Type a Name for Issue Search"><span class="help-block" hidden>This is a help text</span>
+			              </div>
+
+  			              <label class="col-md-1 col-form-label" for="date-input">Start Date</label>
+			              <div class="col-md-2">
+			                <input class="form-control" id="start_date-input" type="date" name="start_date-input" placeholder="date">
+			                <span class="help-block" id="sdate_err" style="color:#FF0000" hidden>Please enter a valid start date!</span>
+			              </div>
+
+  			              <label class="col-md-1 col-form-label" for="date-input">End Date</label>
+			              <div class="col-md-2">
+			                <input class="form-control" id="end_date-input" type="date" name="end_date-input" placeholder="date">
+			                <span class="help-block" id="edate_err" style="color:#FF0000" hidden>Please enter a valid end date!</span>
+			              </div>
+			            </div>
+
+						</form>
+			        </div>
+
+					<!-- Card footer: Buttons -->
+			        <div class="d-flex justify-content-end card-footer">
+			          <button class="btn btn-dark" type="reset" style="min-width: 120px"> Reset</button>
+			          <div style="min-width: 20px"></div>
+			          <button class="btn btn-info" type="submit" style="min-width: 120px" onclick="GoClick()"> Go! </button>
+			        </div>
+
+	      		</div>
+			</div>
+		</div>
+	</div>
   	<div class="row">
   		<div class="col-lg-12">
   		  <!-- TABLE -->
@@ -47,6 +102,17 @@
         </div>
         <!-- End of row -->
 	</div> 
-
+<script type="text/javascript">
+	//reinput last search for users
+	var lastkeyword = "{{ lastkeyword }}" == null ? "" : "{{ lastkeyword }}";
+	var lastname = "{{ lastname }}" == null ? "" : "{{ lastname }}";
+	var laststart = "{{ laststart }}" == "1970-01-01" ? "" : "{{ laststart }}";
+	var lastend = "{{ lastend }}" == "2100-01-01" ? "" : "{{ lastend }}";
+	document.getElementById("keyword-input").value = lastkeyword;
+	document.getElementById("name-input").value 		 = lastname;
+	document.getElementById("start_date-input").value    = laststart;
+	document.getElementById("end_date-input").value      = lastend;
+</script>
+<script src="{% static 'src/js/search.js' %}"></script>
 
 {% endblock %}
