--- a/D8dashboard/templates/search_result.html
+++ b/D8dashboard/templates/search_result.html
@@ -49,7 +49,7 @@
 
 					<!-- Card footer: Buttons -->
 			        <div class="d-flex justify-content-end card-footer">
-			          <button class="btn btn-dark" type="reset" style="min-width: 120px"> Reset</button>
+			          <button class="btn btn-dark" type="reset" style="min-width: 120px" onclick="Reset()"> Reset</button>
 			          <div style="min-width: 20px"></div>
 			          <button class="btn btn-info" type="submit" style="min-width: 120px" onclick="GoClick()"> Go! </button>
 			        </div>
