--- a/D8dashboard/templates/base/breadcrumb.html
+++ b/D8dashboard/templates/base/breadcrumb.html
@@ -5,7 +5,7 @@
 <div class="c-subheader px-3">
   <!-- Breadcrumb-->
   <ol class="breadcrumb border-0 m-0">
-    <li class="breadcrumb-item">Home</li>
+    <li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
     <li class="breadcrumb-item active">Dashboard</li>
 
 
