--- a/D8dashboard/templates/base/navbar.html
+++ b/D8dashboard/templates/base/navbar.html
@@ -21,9 +21,7 @@
 
     <!-- Header Navigation Bar -->
     <ul class="c-header-nav d-md-down-none">
-      <li class="c-header-nav-item px-3"><a class="c-header-nav-link" href="#">Dashboard</a></li>
-      <li class="c-header-nav-item px-3"><a class="c-header-nav-link" href="#">Users</a></li>
-      <li class="c-header-nav-item px-3"><a class="c-header-nav-link" href="#">Settings</a></li>
+      <li class="c-header-nav-item px-3"><a class="c-header-nav-link" href="{% url 'home' %}">Dashboard</a></li>
     </ul>
 
     <!-- Header Aside Icons -->
@@ -42,51 +40,6 @@
           <svg class="c-icon">
             <use xlink:href="{% static 'dist/vendors/@coreui/icons/svg/free.svg' %}#cil-envelope-open"></use>
           </svg></a>
-      </li>
-      <!-- Header Aside Avator -->
-      <li class="c-header-nav-item dropdown">
-          <a class="c-header-nav-link" data-toggle="dropdown" href="#" role="button" 
-             aria-haspopup="true" aria-expanded="false">
-          <div class="c-avatar">
-            <img class="c-avatar-img" src="{% static 'dist/assets/img/avatars/5.jpg' %}" alt="user@email.com">
-          </div>
-          </a>
-          <!-- Header Avator Dropdown Menu -->
-            <div class="dropdown-menu dropdown-menu-right pt-0">
-              <div class="dropdown-header bg-light py-2"><strong>Account</strong></div><a class="dropdown-item" href="#">
-                <svg class="c-icon mr-2">
-                  <use xlink:href="{% static 'dist/vendors/@coreui/icons/svg/free.svg#cil-bell' %}"></use>
-                </svg> Updates<span class="badge badge-info ml-auto">42</span></a><a class="dropdown-item" href="#">
-                <svg class="c-icon mr-2">
-                  <use xlink:href="{% static 'dist/vendors/@coreui/icons/svg/free.svg#cil-envelope-open' %}"></use>
-                </svg> Messages<span class="badge badge-success ml-auto">42</span></a><a class="dropdown-item" href="#">
-                <svg class="c-icon mr-2">
-                  <use xlink:href="{% static 'dist/vendors/@coreui/icons/svg/free.svg#cil-task' %}"></use>
-                </svg> Tasks<span class="badge badge-danger ml-auto">42</span></a><a class="dropdown-item" href="#">
-                <svg class="c-icon mr-2">
-                  <use xlink:href="{% static 'dist/vendors/@coreui/icons/svg/free.svg#cil-comment-square' %}"></use>
-                </svg> Comments<span class="badge badge-warning ml-auto">42</span></a>
-              <div class="dropdown-header bg-light py-2"><strong>Settings</strong></div><a class="dropdown-item" href="#">
-                <svg class="c-icon mr-2">
-                  <use xlink:href="{% static 'dist/vendors/@coreui/icons/svg/free.svg#cil-user' %}"></use>
-                </svg> Profile</a><a class="dropdown-item" href="#">
-                <svg class="c-icon mr-2">
-                  <use xlink:href="{% static 'dist/vendors/@coreui/icons/svg/free.svg#cil-settings' %}"></use>
-                </svg> Settings</a><a class="dropdown-item" href="#">
-                <svg class="c-icon mr-2">
-                  <use xlink:href="{% static 'dist/vendors/@coreui/icons/svg/free.svg#cil-credit-card' %}"></use>
-                </svg> Payments<span class="badge badge-secondary ml-auto">42</span></a><a class="dropdown-item" href="#">
-                <svg class="c-icon mr-2">
-                  <use xlink:href="{% static 'dist/vendors/@coreui/icons/svg/free.svg#cil-file' %}"></use>
-                </svg> Projects<span class="badge badge-primary ml-auto">42</span></a>
-              <div class="dropdown-divider"></div><a class="dropdown-item" href="#">
-                <svg class="c-icon mr-2">
-                  <use xlink:href="{% static 'dist/vendors/@coreui/icons/svg/free.svg#cil-lock-locked' %}"></use>
-                </svg> Lock Account</a><a class="dropdown-item" href="#">
-                <svg class="c-icon mr-2">
-                  <use xlink:href="{% static 'dist/vendors/@coreui/icons/svg/free.svg#cil-account-logout' %}"></use>
-                </svg> Logout</a>
-            </div>
       </li>
     </ul>
     
