--- a/D8dashboard/templates/search.html
+++ b/D8dashboard/templates/search.html
@@ -25,7 +25,7 @@
 			                <input class="form-control" id="keyword-input" type="text" name="keyword-input" placeholder="Type Key Word for Issue Search"><span class="help-block" hidden>This is a help text</span>
 			              </div>
 
-  			              <label class="col-md-1 col-form-label text-right" for="text-input">Name</label>
+  			              <label class="col-md-1 col-form-label text-right" for="text-input">Member Name</label>
 			              <div class="col-md-2">
 			                <input class="form-control" id="name-input" type="text" name="name-input" placeholder="Type a Name for Issue Search"><span class="help-block" hidden>This is a help text</span>
 			              </div>
