--- a/D8dashboard/templates/index.html
+++ b/D8dashboard/templates/index.html
@@ -18,16 +18,16 @@
               <div class="card-body">
                 <form id="search_form" class="form-horizontal" action="{% url 'result' %}" method="post" enctype="multipart/form-data">
                   {% csrf_token %}
-                  <div class="d-flex form-group row justify-content-left">
+                  <div class="d-flex form-group row justify-content-left" style="font-size:13px">
                     <div class="d-flex" style="width:80%">
                     <label class="col-md-1 col-form-label text-right" for="text-input">Key Word</label>
                     <div class="col-md-2">
-                      <input class="form-control" id="keyword-input" type="text" name="keyword-input" placeholder="Key Word for Issue"><span class="help-block" hidden>This is a help text</span>
+                      <input class="form-control" id="keyword-input" type="text" name="keyword-input" placeholder="Key Word"><span class="help-block" hidden>This is a help text</span>
                     </div>
 
                       <label class="col-md-1 col-form-label text-right" for="text-input">Member</label>
                     <div class="col-md-2">
-                      <input class="form-control" id="name-input" type="text" name="name-input" placeholder="Type a Member Name"><span class="help-block" hidden>This is a help text</span>
+                      <input class="form-control" id="name-input" type="text" name="name-input" placeholder="Member Name"><span class="help-block" hidden>This is a help text</span>
                     </div>
 
                       <label class="col-md-1 col-form-label text-right" for="date-input">Start Date</label>
@@ -44,9 +44,13 @@
                     </div>
 
                     <div class="d-flex justify-content-center" style="width:20%">
-                      <button class="btn btn-info" type="submit" style="min-width: 100px" onclick="GoClick()"> Go! </button>
-                      <div style="min-width: 20px"></div>
-                      <button class="btn btn-dark" type="reset" style="min-width: 100px" onclick="Reset()"> Reset</button>
+                      <div class="col-md-6">
+                        <button class="btn btn-info" type="submit" style="width:100%" onclick="GoClick()"> <strong>Go!</strong> </button>
+                      </div>
+                      <div class="col-md-6">
+                        <button class="btn btn-dark" type="reset" style="width: 100%" onclick="Reset()"> Reset</button>
+                      </div>
+
                     </div>
                   </div>
 
