--- a/D8dashboard/templates/search.html
+++ b/D8dashboard/templates/search.html
@@ -9,7 +9,7 @@
 	      		<div class="card" style="width:100%">
 			        <div class="card-header d-flex justify-content-between">
 			        	<div class="text-left">
-			        		<strong>DB Search</strong>
+			        		<strong>Issue Search</strong>
 			        	</div>
 			        	<div class="text-right">
 			       			<!-- Option text or links -->
@@ -18,14 +18,14 @@
 			        <div class="card-body">
 			          <form id="search_form" class="form-horizontal" action="{% url 'result' %}" method="post" enctype="multipart/form-data">
 			          	{% csrf_token %}
-			            <div class="d-flex form-group row justify-content-center">
+			            <div class="d-flex form-group row justify-content-center" style="font-size:14px">
 
 			              <label class="col-md-1 col-form-label text-right" for="text-input">Key Word</label>
 			              <div class="col-md-2">
-			                <input class="form-control" id="keyword-input" type="text" name="keyword-input" placeholder="Type Key Word for Issue Search"><span class="help-block" hidden>This is a help text</span>
+			                <input class="form-control" id="keyword-input" type="text" name="keyword-input" placeholder="Key Word for Issue Search"><span class="help-block" hidden>This is a help text</span>
 			              </div>
 
-  			              <label class="col-md-1 col-form-label text-right" for="text-input">Member Name</label>
+  			              <label class="col-md-1 col-form-label text-right" for="text-input">Member</label>
 			              <div class="col-md-2">
 			                <input class="form-control" id="name-input" type="text" name="name-input" placeholder="Type a Name for Issue Search"><span class="help-block" hidden>This is a help text</span>
 			              </div>
