--- a/D8dashboard/templates/search_result.html
+++ b/D8dashboard/templates/search_result.html
@@ -10,7 +10,7 @@
 	      		<div class="card" style="width:100%">
 			        <div class="card-header d-flex justify-content-between">
 			        	<div class="text-left">
-			        		<strong>DB Search</strong>
+			        		<strong>Issue Search</strong>
 			        	</div>
 			        	<div class="text-right">
 			       			<!-- Option text or links -->
@@ -19,14 +19,14 @@
 			        <div class="card-body">
 			          <form id="search_form" class="form-horizontal" action="{% url 'result' %}" method="post" enctype="multipart/form-data">
 			          	{% csrf_token %}
-			            <div class="d-flex form-group row justify-content-center">
+			            <div class="d-flex form-group row justify-content-center" style="font-size:14px">
 
 			              <label class="col-md-1 col-form-label text-right" for="text-input">Key Word</label>
 			              <div class="col-md-2">
 			                <input class="form-control" id="keyword-input" type="text" name="keyword-input" placeholder="Type Key Word for Issue Search"><span class="help-block" hidden>This is a help text</span>
 			              </div>
 
-  			              <label class="col-md-1 col-form-label text-right" for="text-input">Member Name</label>
+  			              <label class="col-md-1 col-form-label text-right" for="text-input">Member</label>
 			              <div class="col-md-2">
 			                <input class="form-control" id="name-input" type="text" name="name-input" placeholder="Type a Name for Issue Search"><span class="help-block" hidden>This is a help text</span>
 			              </div>
@@ -64,12 +64,12 @@
           <div class="card">
             <div class="card-header"><strong>Search Result</strong></div>
             <div class="card-body">
-              <table class="table table-responsive-sm table-striped text-left">
+              <table class="table table-striped text-left" style="font-size:14px">
                 <thead>
                   <tr>
-                    <th style="width: 100px">Customer</th>
+                    <th style="width:10%">Customer</th>
                     <th>Identification</th>
-                    <th>Description</th>
+                    <th style="width:300px">Description</th>
                     <th>Project</th>
                     <th>Supplier</th>
                     <th style="width: 120px">Part Number</th>
@@ -85,7 +85,7 @@
                	  {% for inner in results %}
 	                  <tr>
 	                  	{% for item in inner %}
-	                    	<td> {{ item }} </td>
+	                    	<td style="min-width:150px"> {{ item }} </td>
 	                    {% endfor%}	
 	                  </tr>
                   {% endfor%}
