--- a/D8dashboard/templates/index.html
+++ b/D8dashboard/templates/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
   <div>
-    <div class="column">  
+    <div class="column" style="width:83vw">
       <!-- Start of Container -->
       <div class="row">
         <div class="col-md-12 d-flex justify-content-center">
