--- a/D8dashboard/templates/search.html
+++ b/D8dashboard/templates/search.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-	<div class="" style="width:100%">
+	<div class="" style="width:83vw">
 	  	<div class="row">
 	    	<div class="col-md-12 d-flex justify-content-center">
 	      		<div class="card" style="width:100%">
