--- a/D8dashboard/templates/search_result.html
+++ b/D8dashboard/templates/search_result.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <!-- Search Box -->
-	<div class="" style="width:100%">
+	<div class="" style="width:83vw">
 	  	<div class="row">
 	    	<div class="col-md-12 d-flex justify-content-center">
 	      		<div class="card" style="width:100%">
@@ -58,7 +58,7 @@
 			</div>
 		</div>
 	</div>
-  	<div class="row">
+  	<div class="row" style="width:130vw">
   		<div class="col-lg-12">
   		  <!-- TABLE -->
           <div class="card">
@@ -67,13 +67,13 @@
               <table class="table table-striped text-left" style="font-size:14px">
                 <thead>
                   <tr>
-                    <th style="width:10%">Customer</th>
-                    <th>Identification</th>
+                    <th style="width:100px">Customer</th>
+                    <th style="width:600px">Identification</th>
                     <th style="width:300px">Description</th>
                     <th>Project</th>
                     <th>Supplier</th>
-                    <th style="width: 120px">Part Number</th>
-                    <th style="width: 120px">RON Number</th>
+                    <th style="width: 100px">Part Number</th>
+                    <th style="width: 100px">RON Number</th>
                     <th>Cost</th>
                     <th>Owner</th>
                     <th style="width: 100px">Open Date</th>
