--- a/D8dashboard/templates/index_result.html
+++ b/D8dashboard/templates/index_result.html
@@ -65,7 +65,7 @@
 
         <!-- Bar Chart -->
         <div class="card">
-          <div class="card-header">Projects Trend</div>
+          <div class="card-header">Projects Update</div>
           <div class="card-body">
             <div class="c-chart-wrapper">
               <canvas id="main-barchart"></canvas>
@@ -153,13 +153,15 @@
         label: "New Open Issues",
         data: barOpens,
         order: 2,
-        backgroundColor: openBgColor,
+        backgroundColor: closedBgColor,
       },
       {
         label: "Closed Issues",
         data: barClosed,
         order: 1,
-        backgroundColor: closedBgColor,
+        borderColor: ['#36A2EB'],
+        type: 'line',
+        fill: false,
       }],
       labels: barDates
       },
@@ -169,7 +171,7 @@
           yAxes:[{
             ticks:{
               suggestedMin: 0,
-              suggestedMax: maxValue + 4,
+              suggestedMax: maxValue*1.25,
               maxTicksLimit: 5,
             }
           }]
